# DE-Zoomcamp-2026

./: .gitignore
1-docker_terraform/data_pipeline/: Dockerfile  notebook.ipynb  pipeline.py
1-docker_terraform/data_pipeline/.ipynb_checkpoints/: pyproject-checkpoint.toml
1-docker_terraform/homework/: homework.ipynb  main.tf  pyproject.toml
2-workflow-orchestration/: docker-compose.yaml  main.py  pyproject.toml
3-data-warehouse/: homework_queries_bigquery.sql  load_yellow_taxi_data.py  pyproject.toml
4-analytics-engineering/taxi_rides_ny/: ingest_fhv.py  packages.yml  test_connection.py
4-analytics-engineering/taxi_rides_ny/models/marts/: homework.sql
4-analytics-engineering/taxi_rides_ny/models/staging/: sources.yml  stg_fhv_tripdata.sql
5-data-platforms/dlt_homework/: main.py  pyproject.toml  taxi_pipeline.py
5-data-platforms/dlt_homework/.dlt_pipelines/taxi_pipeline/: trace.pickle
6-batch/: homework.ipynb  pyproject.toml  test_spark.py
7-streaming/workshop/: Dockerfile.flink  docker-compose.yaml  pyproject.toml
7-streaming/workshop/notebooks/: consumer.ipynb  models.py
