[project]
name = "6-batch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.4"
dependencies = [
    "asttokens==3.0.0",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "executing==2.2.1",
    "findspark==2.0.1",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.3.2",
    "parso==0.8.5",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "py4j==0.10.9.7",
    "pygments==2.19.2",
    "pyspark==3.4.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32==311",
    "pyzmq==27.0.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "tzdata==2025.2",
    "wcwidth==0.2.13",
    "wget==3.2",
]
